<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#002e58"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#002e58"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="50sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_the_email"
            android:background="@drawable/forget"
            android:textColor="#002e58"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/userPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:background="@drawable/forget"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/login"
            android:textSize="17sp"
            android:textColor="#fff"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            />
        <TextView
            android:id="@+id/regTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Not a User? Click here to Sign up"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
        

</LinearLayout>