<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#002e58"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="#002e58"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="40sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Details Below"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Enter your full name"
            android:textColorHint="#002e58"
            android:background="@drawable/forget"
            android:textColor="#002e58"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_the_email"
            android:textColorHint="#002e58"
            android:background="@drawable/forget"
            android:textColor="#002e58"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/userPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/enter_your_password"
            android:textColorHint="#002e58"
            android:inputType="textPassword"
            android:background="@drawable/forget"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/userCnfPass"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Confirm Password"
            android:textColorHint="#002e58"
            android:inputType="textPassword"
            android:background="@drawable/forget"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"/>
        <EditText
            android:id="@+id/usrPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="phone number"
            android:textColorHint="#002e58"
            android:inputType="number"
            android:background="@drawable/forget"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#002e58"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>


        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:entries="@array/gender_options"
        />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="Register"
            android:textSize="17sp"
            android:textColor="#fff"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>


</LinearLayout>